added test server details

--- a/roles/zero_users/vars/user_sudo_access_details.yml
+++ b/roles/zero_users/vars/user_sudo_access_details.yml
@@ -22,4 +22,8 @@
 #
 
 # By default, no user is granted sudo access.
-user_sudo_access_details: {}
+#user_sudo_access_details: {}
+
+user_sudo_access_details:
+   sid:
+      - webservers   
